@@ -18,7 +18,7 @@
    +----------------------------------------------------------------------+
  */
 
-/* $Id: sapi_apache2.c,v 1.91.2.18 2003/08/01 20:21:21 iliaa Exp $ */
+/* $Id: sapi_apache2.c,v 1.91.2.19 2003/08/02 18:30:22 iliaa Exp $ */
 
 #include <fcntl.h>
 
@@ -236,7 +236,9 @@ php_apache_sapi_flush(void *server_context)
 	 * then don't bother flushing. */
 	if (!server_context)
 		return;
-    
+
+	ctx->r->status = SG(sapi_headers).http_response_code;
+
 	f = ctx->f;
 
 	/* Send a flush bucket down the filter chain. The current default
