@@ -18,7 +18,7 @@
    +----------------------------------------------------------------------+
  */
 
-/* $Id: sapi_apache2.c,v 1.1.2.18 2003/08/01 20:21:21 iliaa Exp $ */
+/* $Id: sapi_apache2.c,v 1.1.2.19 2003/08/02 18:30:21 iliaa Exp $ */
 
 #include <fcntl.h>
 
@@ -259,6 +259,8 @@ php_apache_sapi_flush(void *server_context)
 
 	r = ctx->r;
 	brigade = ctx->brigade;
+
+	r->status = SG(sapi_headers).http_response_code;
 
 	/* Send a flush bucket down the filter chain. */
 	bucket = apr_bucket_flush_create(r->connection->bucket_alloc);
