@@ -3,6 +3,7 @@ PHP 4                                                                      NEWS
 ?? Aug 2003, Version 4.3.3RC3
 - Fixed bug #24883 (variables_order and gpc_order being ignored). (Ilia)
 - Fixed bug #24871 (methods misidentified as constructors). (Ilia)
+- Fixed bug #24177 (Status not set correctly after flush() in Apache 2). (Ilia)
 - Fixed bug #23509 (exit code lost when exit() called from 
   register_shutdown_function()). (Ilia)
 - Fixed bug #22154 (Possible crash when memory_limit is reached and
